--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,40 @@
 body{
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 margin: 0;
-display: flex;
+}
+
+body, .fourth-section, .background, .first-section, .top-header, .header-left, .header-right,  .container-box, .title{
+  display: flex;
+}
+
+body, .fourth-section, .first-section{
 flex-direction: column;
 }
 
+.first-section, .top-header{
+  justify-content: space-between;
+}
 
 .first-section{
-  display: flex;
-flex-direction: column;
 gap: 8px;
 background: #1F2937;
 padding: 64px;
-justify-content: space-between;
+}
 
-}
-.top-header{
-  display: flex;
-  justify-content: space-between;
-}
 .header-logo{
   font-size: 24px;
-  color: #F9FAF8;
-}
+  }
 
-.header-left, .header-right{
-  display: flex;
+.header-left, .header-right{  
   gap: 16px;
-  align-items: center;
+}
 
-}
-.title{
-  display: flex;
-}
 .main-heading{
   font-size: 48px;
-  font-weight: 800;
-  color: #F9FAF8;
+  font-weight: 600px;
+}
+.header-logo, .main-heading{
+  color: #F9FAF8;  
 }
 
 ul{
@@ -48,8 +46,7 @@ a, .small-heading {
   color: #E5E7EB;
 }
 .first-button {
-  background: #3882F6;
-  border-radius: 8px;
+    border-radius: 8px;
   border: 2px solid #3882F6;
 }
 
@@ -57,12 +54,9 @@ img{
   width: 432px;
   height: auto;
 }
-/* Second Section*/
-
- 
+/* Second Section*/ 
  .container-box{
-   display: flex;
-   justify-content: center;
+  justify-content: center;
    gap: 64px;  
  }
  .customize{
@@ -102,34 +96,34 @@ img{
 
  
   /* Forth Section */
-  .fourth-section{
-    display: flex;    
+  .fourth-section, .background{      
     align-items: center;
-    justify-content: center;     
-    height: 300px;
+        
   }
-  .background{  
-      display: flex;     
-  justify-content: space-between; 
-  background: #3882F6;
-   width: 700px;
-  height: 100px;
-  border-radius: 16px;
-  color: #F9FAF8;
-  padding-right: 64px;
-  padding-left: 64px;
+  .fourth-section{
+    height: 300px;
+    justify-content: center;
     }
 
+  .background{    
+    column-gap: 32px;    
+  border-radius: 16px;  
+  padding-right: 48px;
+  padding-left: 48px;
+  }
   .call{
     font-weight: bold;
-  }  
-
-  .right-button{
+  } 
+  .background, .first-button, .right-button{
+    color: #F9FAF8;
     background: #3882F6;
-    color:  #F9FAF8;
+
+  } 
+
+  .right-button{    
     border: 1px solid #F9FAF8;
     border-radius: 5px;
-    font-weight: bold;   
+    font-weight: bold;     
   }
 
   /* footer */
