--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,8 @@ img{
 /* Second Section*/ 
  .container-box{
   justify-content: center;
-   gap: 64px;  
+   gap: 64px; 
+   flex-wrap: wrap; 
  }
  .customize{
   text-align: center;
