--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 margin: 0;
+max-width: 100%;
 }
 
 body, .fourth-section, .background, .first-section, .top-header, .header-left, .header-right,  .container-box, .title{
